RedisUtils中部分逻辑待完善，主体为key的类型问题。在redis中可能被加上双引号